--- a/Mit_Students_Website/package.json
+++ b/Mit_Students_Website/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "axios": "^1.7.9",
+    "openai": "^4.79.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1"
@@ -32,4 +35,3 @@
     "vite": "^5.4.1"
   }
 }
-
